--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-pdfplumber==0.10.3
-numpy==1.24.3
-scikit-learn==1.3.0
-python-Levenshtein==0.21.1
-pytest==7.4.0
+# Core dependencies for PDF processing and chunking
+PyMuPDF>=1.23.0
+numpy>=1.24.0
+
+
+# Optional: for better performance and additional models
+transformers>=4.30.0
+scikit-learn>=1.3.0
+
+# Development and testing
+pytest>=7.0.0
